# chat-app

./: .env  README.md  docker-compose.yml  test.db
backend/: .env  .gitignore  Dockerfile  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/routers/: auth_router.py  chat_router.py  room_router.py  user_router.py
backend/services/: auth_service.py  chat_service.py  message_service.py  room_service.py  user_service.py
backend/src/api/: auth.py  database.py  main.py  models.py
backend/src/api/routers/: auth_router.py  chat_router.py  room_router.py  user_router.py
backend/src/api/services/: auth_service.py  chat_service.py  room_service.py  user_service.py
backend/tests/api/routers/: conftest.py  test_auth_router.py  test_room_router.py
backend/tests/api/services/: test_auth_services.py  test_chat_services.py  test_room_services.py  test_user_services.py
backend/tests/routers/: conftest.py  test_room_router.py  test_user_router.py
backend/tests/services/: test_auth_services.py  test_chat_services.py  test_room_services.py  test_user_services.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: ChatApp.tsx
frontend/src/components/context/: PrivateRoute.tsx  UserContext.tsx
frontend/src/components/form/: BasicInput.tsx  Button.tsx  (+5 more)
frontend/src/services/: authService.ts  chatSocketService.ts  roomService.ts  userService.ts
frontend/src/types/: MessageType.ts  RoomType.ts  UserType.ts
frontend/src/utility/: formatDate.ts
(+6 files in other folders)
